--- a/style.css
+++ b/style.css
@@ -1,4 +1,31 @@
-h1, h3 {
-	font-family: sans-serif;
+* {
+	text-align: center;
+}
+h1, h3, a {
+	font-family: monospace;
+	color: #dddddd
+	
+}
+#title {
+	padding-bottom: 50px;
+}
+body {
+	background-color: #111111;
 }
 
+span {
+	color: violet
+}
+
+a {
+	text-decoration: none;
+	padding: 10px;
+}
+
+a:hover {
+	color:violet;
+}
+
+a::after {
+	color:blueviolet
+}
