--- a/style.css
+++ b/style.css
@@ -1,18 +1,23 @@
 * {
-	text-align: center;
 	font-family: monospace;
 	color: #dddddd;
 }
 
 h1 {
+	text-align: center;
 	font-size: 70px;
 }
 h3 {
 	font-size: 30px;
 }
-
+p {
+	font-size: 18px;
+}
 body {
 	background-color: #111111;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 500px;
 }
 
 span {
@@ -39,4 +44,28 @@ a:hover {
 	width: 100px;
 }
 
+.pics {
+	margin: 0 auto;
+	width: 75%;
 
+}
+
+.pics img {
+	max-width: 30%;
+	border: #222222 solid 10px;
+	border-radius: 3px;
+}
+
+img:hover {
+	max-width: 60%;
+
+}
+
+.about {
+	text-align: justify;
+	margin: 0 auto;
+  	width: 75%;
+}
+.stuff {
+	text-align: center;
+}
