--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 	background-color: #111111;
 	padding-left: 20px;
 	padding-right: 20px;
-	padding-bottom: 500px;
+	padding-bottom: 40px;
 }
 
 span {
@@ -47,19 +47,19 @@ a:hover {
 .pics {
 	margin: 0 auto;
 	width: 75%;
+	overflow: auto;
+	white-space: nowrap;
 
 }
 
 .pics img {
-	max-width: 30%;
+	max-width: 500px;
 	border: #222222 solid 10px;
 	border-radius: 3px;
 }
 
-img:hover {
-	max-width: 60%;
 
-}
+
 
 .about {
 	text-align: justify;
@@ -69,3 +69,21 @@ img:hover {
 .stuff {
 	text-align: center;
 }
+
+::-webkit-scrollbar {
+	width: 5px;
+	height: 10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+	background: #222222;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+	background: #ee82ee;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+	background: #ee82ee9c;
+  }
+  
